# ShaderToy-Example

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  cmake2.yml
release/shader-demo-linux/: shader-demo
release/shader-demo-linux/shaders/: demo.glsl  firetunnel.glsl  whitestar.glsl
release/shader-demo-windows/shaders/: windwalker.glsl
shader-demo/: shader-demo
shaders/: 3d.glsl  desert.glsl  test.glsl
src/: main.cpp
